Changes following database testing

--- a/stroom/install_mixed_cluster.yml
+++ b/stroom/install_mixed_cluster.yml
@@ -75,6 +75,7 @@
         - remove_dev_certs
         - deploy
         - configure
+      when: remove_development_certificates | default(false) == true
 
     - import_role:
         name: stack/update_config
