--- a/stroom/roles/non_docker_stroom/set_stroom_conf_values/tasks/set_key_value.yml
+++ b/stroom/roles/non_docker_stroom/set_stroom_conf_values/tasks/set_key_value.yml
@@ -6,7 +6,7 @@
 #  stroom.rack=rack1
 #  stroom.temp=/tmp/stroom/
 
-- name: "Setting {{ item.key }}={{ item.value }} in {{ stroom_conf_file }}"
+- name: "Setting {{ item.key }}={{ item.value }}"
   lineinfile:
     path: "{{ stroom_conf_file }}"
     regexp: '^\s*#?\s*{{ item.key }}=.*'
