--- a/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/update_config/tasks/main.yml
@@ -57,6 +57,7 @@
     src: "{{ item.src }}/"
     dest: "{{ stroom_config_dir }}/{{ item.path }}"
     mode: "u=rw,g=,o="
+    backup: true
   with_filetree: "{{ stroom_config_files_and_templates_dir }}/config"
   loop_control:
     label: "{{ item.path }}"
@@ -76,6 +77,7 @@
     src: "{{ item.src }}/"
     dest: "{{ stroom_config_dir }}/{{ item.path | regex_replace('.j2$','') }}"
     mode: "u=rw,g=,o="
+    backup: true
   with_filetree: "{{ stroom_config_files_and_templates_dir }}/config/"
   loop_control:
     label: "{{ item.path }}"
