--- a/stroom/roles/non_docker_stroom/download/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/download/tasks/main.yml
@@ -44,7 +44,7 @@
       unarchive:
         src: "{{ downloads_dir }}/{{ stroom_archive_filename }}"
         dest:  "{{ stroom_bin_dir }}"
-        remote_src: yes
+        remote_src: true
 
     - name: Ensure logs directory exists
       file:
@@ -57,7 +57,7 @@
 - name: Create a symlink for 'latest'
   file:
     state: link
-    force: yes
+    force: true
     src: "{{ stroom_version }}"
     dest: "{{ stroom_install_root_dir }}/stroom/latest"
 
