--- a/config/mixed_economy/vagrant/Vagrantfile
+++ b/config/mixed_economy/vagrant/Vagrantfile
@@ -51,8 +51,9 @@ Vagrant.configure("2") do |config|
     # Noddy playbook so we can generate an inventory
     ansible.playbook = "vagrant_playbook.yml"
 
-    # Add each machine to the appropriate ansible group
     ansible.groups = { }
+    ansible.host_vars = { }
+
     $stdout.puts "Ansible hosts:"
     servers.each do |machine|
       group = machine[:group]
@@ -65,6 +66,13 @@ Vagrant.configure("2") do |config|
       end
       # Add this host to the group
       ansible.groups[group].push(hostname)
+
+      # Add our fixed IP as a host_var so we can access it in ansible
+      # This is because ansible_host gets set to 127.0.0.1 as vagrant has
+      # some funky port forwearding approach to connecting to the hosts
+      ansible.host_vars[machine[:hostname]] = {
+        "vagrant_ip_address" => machine[:ip],
+      }
     end
 
     $stdout.puts "Ansible groups:"
