--- a/config/remote_proxy/vagrant/Vagrantfile
+++ b/config/remote_proxy/vagrant/Vagrantfile
@@ -33,13 +33,15 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.verbose = "v"
-    # Noddy playbook that doesn't change anything just so we can generate an inventory
+    # Noddy playbook so we can generate an inventory
     ansible.playbook = "vagrant_playbook.yml"
 
     # TODO Figure out how to get rid of those pesky cows
 
     # Add each machine to the appropriate ansible group
     ansible.groups = { }
+    ansible.host_vars = { }
+
     $stdout.puts "Ansible hosts:"
     servers.each do |machine|
       group = machine[:group]
@@ -52,6 +54,13 @@ Vagrant.configure("2") do |config|
       end
       # Add this host to the group
       ansible.groups[group].push(hostname)
+
+      # Add our fixed IP as a host_var so we can access it in ansible
+      # This is because ansible_host gets set to 127.0.0.1 as vagrant has
+      # some funky port forwearding approach to connecting to the hosts
+      ansible.host_vars[machine[:hostname]] = {
+        "vagrant_ip_address" => machine[:ip],
+      }
     end
 
     $stdout.puts "Ansible groups:"
