--- a/stroom/roles/non_docker_proxy/unpack_config/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/unpack_config/tasks/main.yml
@@ -17,7 +17,7 @@
   unarchive:
     src: "{{ stroom_proxy_downloads_path }}/{{ stroom_proxy_archive_filename }}"
     dest:  "{{ stroom_proxy_unpack_temp_dir.path }}"
-    remote_src: yes
+    remote_src: true
 
 - name: "Ensure directory {{ stroom_proxy_config_path }} exists"
   file:
@@ -28,11 +28,11 @@
   copy:
     src: "{{ stroom_proxy_unpack_temp_dir.path }}/config"
     dest:  "{{ stroom_proxy_release_path }}/"
-    remote_src: yes
+    remote_src: true
 
 - name: Create a symlink for latest
   file:
     state: link
-    force: yes
+    force: true
     src: "{{ stroom_proxy_version }}"
     dest: "{{ stroom_proxy_releases_path }}/latest"
