--- a/stroom/roles/non_docker_stroom/send_config/tasks/main.yml
+++ b/stroom/roles/non_docker_stroom/send_config/tasks/main.yml
@@ -13,7 +13,7 @@
     # line: "\\1{{ inventory_hostname }}"
     # line: "\\1{{ ansible_host }}"
     line: "\\1{{ inventory_hostname_short }}"
-    backrefs: yes
+    backrefs: true
 
 # NOTE: Yaml requires escaping backslashes in double quotes but not in single quotes
 - name: "Set the stroom HTML title to {{ environment_name }}"
@@ -21,4 +21,4 @@
     path:  "{{home}}/stroom/latest/config/stroom.conf"
     regexp: '^(stroom.htmlTitle=).*$'
     line: "\\1{{ environment_name }}"
-    backrefs: yes
+    backrefs: true
