--- a/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
+++ b/stroom/roles/stack/remove_certs/tasks/delete_certs.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: "Deleting certs for serivce {{ _service_dev_certs.service }}"
+- name: "Deleting development certs in {{ _service_dev_certs.path }}"
   file:
-    path: "{{ stack_volumes_dir }}/{{ _service_dev_certs.service }}/certs/{{ _cert_file_name }}"
+    path: "{{ _service_dev_certs.path }}/{{ _cert_file_name }}"
     state: absent
   loop: "{{ _service_dev_certs.files }}"
   loop_control:
     loop_var: _cert_file_name
-    label: "{{ _service_dev_certs.service }} - {{ _cert_file_name }}"
+    label: "{{ _service_dev_certs.path }}/{{ _cert_file_name }}"
 
