--- a/stroom/install_stack.yml
+++ b/stroom/install_stack.yml
@@ -1,13 +1,26 @@
 ---
-- name: Install services 
-  vars_files:
-    - ./variables.yml
-    - ../global_variables.yml
-    - ../config/user_settings.yml
-  vars:
-    # You'll need to manually change this if you don't have access to the internet from your controller.
-    # stack_url: https://github.com/gchq/stroom-resources/releases/download/stroom-stacks-{{stack_version}}/{{stack_name}}-{{stack_version}}.tar.gz
-  hosts: stroom_services
-  roles:
-    - roles/stack/install
+########### LOCALHOST  ###########
+
+- name: Verify local_config_dir is set up
+  import_playbook: ./verify_local_config_dir_exists.yml
+
+################### SETUP HOST(S) ###################
+
+- name: Setup stroom hosts
+  import_playbook: ./setup_stroom_hosts.yml
+  tags:
+    - setup
+
+########### '.*_stack' HOSTS  ###########
+
+- name: "Deploy stack"
+  hosts:
+    - ~.*_stack$
+  gather_facts: true
+  tasks:
+
+    - import_role:
+        name: stack/deploy
+      tags:
+        - deploy
 
