--- a/stroom/roles/setup/common/tasks/main.yml
+++ b/stroom/roles/setup/common/tasks/main.yml
@@ -65,7 +65,7 @@
 
   # Allows nodes to see ech other when there is no dns server availble
   # Attemps to get the IP address of the host from (in this order):
-  # The variable 'vagrant_ip_address' as set when using vagrant
+  # The variable 'public_ip_address' as set when using vagrant
   # The 'default' ipv4 address
   # The first ipv4 address in the list of addresses
   # Needs gather_facts
@@ -74,17 +74,17 @@
   lineinfile:
     dest: /etc/hosts
     regexp: '.*{{ item }}$'
-    line: "{{ hostvars[item]['vagrant_ip_address'] 
+    line: "{{ hostvars[item]['public_ip_address'] 
       | default(hostvars[item]['ansible_default_ipv4']['address']
       | default(hostvars[item]['ansible_all_ipv4_addresses'][0])) }} {{item}}"
     state: present
-  when: (hostvars[item].vagrant_ip_address is defined 
+  when: (hostvars[item].public_ip_address is defined 
       or hostvars[item].ansible_default_ipv4 is defined 
       or hostvars[item].ansible_all_ipv4_addresses is defined )
     and add_etc_hosts_entries | default(true) == true
   with_items: "{{ groups.all }}"
   loop_control:
-    label: "{{ hostvars[item]['vagrant_ip_address'] 
+    label: "{{ hostvars[item]['public_ip_address'] 
       | default(hostvars[item]['ansible_default_ipv4']['address']
       | default(hostvars[item]['ansible_all_ipv4_addresses'][0])) }} {{ item }}"
   tags:
