--- a/stroom/roles/stack/set_host_ip/tasks/main.yml
+++ b/stroom/roles/stack/set_host_ip/tasks/main.yml
@@ -6,10 +6,10 @@
       - stack_env_var_file is defined
       - inventory_hostname is defined
 
-- name: "Setting HOST_IP=\"{{ vagrant_ip_address | default(inventory_hostname) }}\" in {{ stack_env_var_file }}"
+- name: "Setting HOST_IP=\"{{ public_ip_address | default(inventory_hostname) }}\" in {{ stack_env_var_file }}"
   lineinfile:
     path: "{{ stack_env_var_file }}"
     regexp: '^\s*#?\s*HOST_IP=.*'
-    line: "HOST_IP=\"{{ vagrant_ip_address | default(inventory_hostname) }}\""
+    line: "HOST_IP=\"{{ public_ip_address | default(inventory_hostname) }}\""
 
 
